--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>3D Game</title>
+<style>
+  body { margin: 0; overflow: hidden; background: #000; }
+  #joystick { position: absolute; bottom: 20px; left: 20px; }
+</style>
+</head>
+<body>
+<div id="joystick"></div>
+<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/nipplejs@0.9.1/dist/nipplejs.min.js"></script>
 
+<script>
+// === Сцена ===
+const scene = new THREE.Scene();
+scene.background = new THREE.Color(0x202020);
+
+const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+camera.position.set(0, 2, 5);
+
+const renderer = new THREE.WebGLRenderer({ antialias: true });
+renderer.setSize(window.innerWidth, window.innerHeight);
+document.body.appendChild(renderer.domElement);
+
+// Свет
+const light = new THREE.DirectionalLight(0xffffff, 1);
+light.position.set(5, 10, 7).normalize();
+scene.add(light);
+
+// Игрок
+const geometry = new THREE.BoxGeometry();
+const material = new THREE.MeshStandardMaterial({ color: 0x00ff00 });
+const player = new THREE.Mesh(geometry, material);
+scene.add(player);
+
+// Пол
+const floorGeo = new THREE.PlaneGeometry(100, 100);
+const floorMat = new THREE.MeshStandardMaterial({ color: 0x444444 });
+const floor = new THREE.Mesh(floorGeo, floorMat);
+floor.rotation.x = -Math.PI / 2;
+scene.add(floor);
+
+// === Музыка ===
+let audio;
+function initAudio() {
+    if (audio) return;
+    audio = new Audio("data:audio/mp3;base64,//uQZAAAAAAAAAAAAAAAAAAAA...");
+    audio.loop = true;
+    audio.play().catch(()=>{});
+}
+
+// === Джойстик ===
+let moveForward = 0, moveRight = 0;
+
+const joystick = nipplejs.create({
+    zone: document.getElementById('joystick'),
+    mode: 'static',
+    position: { left: '60px', bottom: '60px' },
+    color: 'white'
+});
+
+joystick.on('move', (evt, data) => {
+    const rad = data.angle.radian;
+    moveForward = Math.cos(rad) * data.distance / 50;
+    moveRight = Math.sin(rad) * data.distance / 50;
+});
+
+joystick.on('end', () => {
+    moveForward = 0;
+    moveRight = 0;
+});
+
+// === Рендер ===
+function animate() {
+    requestAnimationFrame(animate);
+    player.position.x += moveRight * 0.1;
+    player.position.z -= moveForward * 0.1;
+    camera.position.set(player.position.x, player.position.y + 2, player.position.z + 5);
+    camera.lookAt(player.position);
+    renderer.render(scene, camera);
+}
+animate();
+
+window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+});
+
+// Запуск музыки на первый тап
+document.body.addEventListener('click', initAudio);
+document.body.addEventListener('touchstart', initAudio);
+</script>
+</body>
+</html>
